tests/NormalTests/paczka1/fuzzy1/50504178.err
Error in line 6: zCc4gs85fX A705 92,7
Error in line 14: S35 A705 87,67
Error in line 10: S35 A705 17,6
Error in line 15: S35 A706 52,6
Error in line 25: TFkDHT A705 31,7
Error in line 21: xCo9p A705 53,3
Error in line 33: xCo9p S569 -1,2
